--- a/test.ipynb
+++ b/test.ipynb
@@ -834,6 +834,26 @@
    "source": [
     "plt.savefig('')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = {\n",
+    "  'a': lambda x: x * 5,\n",
+    "  'b': lambda x: x + 7,\n",
+    "  'c': lambda x: x - 2\n",
+    "}['a'](2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
