--- a/test.ipynb
+++ b/test.ipynb
@@ -824,15 +824,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
     "result = {\n",
-    "  'a': lambda x: x * 5,\n",
-    "  'b': lambda x: x + 7,\n",
-    "  'c': lambda x: x - 2\n",
-    "}['a'](2)"
+    "    0: lambda x: mu,\n",
+    "  'sin': lambda x: np.sin(x*pi/wireLength)*mumax,\n",
+    "  'cos': lambda x: np.cos(x*pi/wireLength)*mumax+mumax,\n",
+    "  'sinasy': lambda x: np.sin(x*2*pi/wireLength)*mumax+mumax\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam = lambda x: x * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lam(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[0](np.arange(10))"
    ]
   },
   {
