--- a/test.ipynb
+++ b/test.ipynb
@@ -236,71 +236,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'123'*(smoothpot!=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(smoothpot)*(smoothpot!=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
-    "smoothpot='1'"
+    "ll=lambda x: .2*x**0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1'"
+       "array([0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(smoothpot)"
+    "ll(np.arange(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0**0"
    ]
   },
   {
