conductance and tv

--- a/test.ipynb
+++ b/test.ipynb
@@ -216,22 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 387,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.20034692107545535"
-      ]
-     },
-     "execution_count": 279,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "muset[1]"
+    "def ff(x):\n",
+    "    return x+1,x+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1,z2=ff(2)"
    ]
   },
   {
@@ -241,6 +240,26 @@
    "outputs": [],
    "source": [
     "ll=lambda x: .2*x**0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 391,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z2"
    ]
   },
   {
