--- a/test.ipynb
+++ b/test.ipynb
@@ -150,11 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 399,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-399-4bd5faced312>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmuset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0ml2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwireLength\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "muset=-mumax*(np.exp(-(np.arange(wireLength)-.0*wireLength)**2/1))+mu"
+    "muset=l2(np.arange(wireLength))"
    ]
   },
   {
@@ -220,8 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ff(x):\n",
-    "    return x+1,x+2"
+    "l"
    ]
   },
   {
@@ -235,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ll=lambda x: .2*x**0"
+    "l2=lambda x: mumax*np.sin(x*pi/(wireLength/10))*(x<wireLength*10),"
    ]
   },
   {
